y.output
   0  $accept : Program $end

   1  Program : ClassDeclarationList MainClass

   2  ClassDeclarationList : ClassDeclarationList ClassDeclaration
   3                       |

   4  $$1 :

   5  MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'

   6  $$2 :

   7  ClassDeclaration : CLASS Identifier $$2 '{' VarDeclarationList MethodDeclarationList '}'

   8  $$3 :

   9  ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 '{' VarDeclarationList MethodDeclarationList '}'

  10  MethodDeclarationList : MethodDeclarationList MethodDeclaration
  11                        |

  12  $$4 :

  13  MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'

  14  VarDeclarationList : VarDeclarationList VarDeclaration
  15                     |

  16  VarDeclaration : Type Identifier ';'

  17  $$5 :

  18  DeclOrStatList : Identifier Identifier ';' $$5 DeclOrStatList

  19  $$6 :

  20  DeclOrStatList : BaseType Identifier ';' $$6 DeclOrStatList

  21  $$7 :

  22  DeclOrStatList : Identifier '=' Exp ';' $$7 StatementList
  23                 | '{' StatementList '}'
  24                 | IF '(' Exp ')' Statement ELSE Statement StatementList
  25                 | WHILE '(' Exp ')' Statement StatementList
  26                 | SOUT '(' Exp ')' ';' StatementList
  27                 |

  28  $$8 :

  29  ParamList : Type Identifier $$8 ParamListAux
  30            |

  31  $$9 :

  32  ParamListAux : ',' Type Identifier $$9 ParamListAux
  33               |

  34  BaseType : BOOLEAN
  35           | INT

  36  Type : BaseType
  37       | Identifier

  38  Statement : '{' StatementList '}'
  39            | IF '(' Exp ')' Statement ELSE Statement
  40            | WHILE '(' Exp ')' Statement
  41            | SOUT '(' Exp ')' ';'
  42            | Identifier '=' Exp ';'

  43  StatementList : StatementList Statement
  44                |

  45  Exp : Exp AND Exp
  46      | Exp '<' Exp
  47      | Exp '+' Exp
  48      | Exp '-' Exp
  49      | Exp '*' Exp
  50      | Exp '/' Exp
  51      | Exp '.' Identifier '(' RealParamList ')'
  52      | Number
  53      | TRUE
  54      | FALSE
  55      | Identifier
  56      | THIS
  57      | NEW Identifier '(' ')'
  58      | '!' Exp
  59      | '(' Exp ')'

  60  RealParamList : Exp RealParamListAux
  61                |

  62  RealParamListAux : ',' Exp RealParamListAux
  63                   |

state 0
	$accept : . Program $end  (0)
	ClassDeclarationList : .  (3)

	.  reduce 3

	Program  goto 1
	ClassDeclarationList  goto 2


state 1
	$accept : Program . $end  (0)

	$end  accept


state 2
	Program : ClassDeclarationList . MainClass  (1)
	ClassDeclarationList : ClassDeclarationList . ClassDeclaration  (2)

	CLASS  shift 3
	APP  shift 4
	.  error

	MainClass  goto 5
	ClassDeclaration  goto 6


state 3
	ClassDeclaration : CLASS . Identifier $$2 '{' VarDeclarationList MethodDeclarationList '}'  (7)
	ClassDeclaration : CLASS . Identifier EXTENDS Identifier $$3 '{' VarDeclarationList MethodDeclarationList '}'  (9)

	Identifier  shift 7
	.  error


state 4
	MainClass : APP . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	'{'  shift 8
	.  error


state 5
	Program : ClassDeclarationList MainClass .  (1)

	.  reduce 1


state 6
	ClassDeclarationList : ClassDeclarationList ClassDeclaration .  (2)

	.  reduce 2


state 7
	ClassDeclaration : CLASS Identifier . $$2 '{' VarDeclarationList MethodDeclarationList '}'  (7)
	ClassDeclaration : CLASS Identifier . EXTENDS Identifier $$3 '{' VarDeclarationList MethodDeclarationList '}'  (9)
	$$2 : .  (6)

	EXTENDS  shift 9
	'{'  reduce 6

	$$2  goto 10


state 8
	MainClass : APP '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	PUBLIC  shift 11
	.  error


state 9
	ClassDeclaration : CLASS Identifier EXTENDS . Identifier $$3 '{' VarDeclarationList MethodDeclarationList '}'  (9)

	Identifier  shift 12
	.  error


state 10
	ClassDeclaration : CLASS Identifier $$2 . '{' VarDeclarationList MethodDeclarationList '}'  (7)

	'{'  shift 13
	.  error


state 11
	MainClass : APP '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	STATIC  shift 14
	.  error


state 12
	ClassDeclaration : CLASS Identifier EXTENDS Identifier . $$3 '{' VarDeclarationList MethodDeclarationList '}'  (9)
	$$3 : .  (8)

	.  reduce 8

	$$3  goto 15


state 13
	ClassDeclaration : CLASS Identifier $$2 '{' . VarDeclarationList MethodDeclarationList '}'  (7)
	VarDeclarationList : .  (15)

	.  reduce 15

	VarDeclarationList  goto 16


state 14
	MainClass : APP '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	VOID  shift 17
	.  error


state 15
	ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 . '{' VarDeclarationList MethodDeclarationList '}'  (9)

	'{'  shift 18
	.  error


state 16
	ClassDeclaration : CLASS Identifier $$2 '{' VarDeclarationList . MethodDeclarationList '}'  (7)
	VarDeclarationList : VarDeclarationList . VarDeclaration  (14)
	MethodDeclarationList : .  (11)

	INT  shift 19
	BOOLEAN  shift 20
	Identifier  shift 21
	PUBLIC  reduce 11
	'}'  reduce 11

	Type  goto 22
	BaseType  goto 23
	MethodDeclarationList  goto 24
	VarDeclaration  goto 25


state 17
	MainClass : APP '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	MAIN  shift 26
	.  error


state 18
	ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 '{' . VarDeclarationList MethodDeclarationList '}'  (9)
	VarDeclarationList : .  (15)

	.  reduce 15

	VarDeclarationList  goto 27


state 19
	BaseType : INT .  (35)

	.  reduce 35


state 20
	BaseType : BOOLEAN .  (34)

	.  reduce 34


state 21
	Type : Identifier .  (37)

	.  reduce 37


state 22
	VarDeclaration : Type . Identifier ';'  (16)

	Identifier  shift 28
	.  error


state 23
	Type : BaseType .  (36)

	.  reduce 36


state 24
	ClassDeclaration : CLASS Identifier $$2 '{' VarDeclarationList MethodDeclarationList . '}'  (7)
	MethodDeclarationList : MethodDeclarationList . MethodDeclaration  (10)

	PUBLIC  shift 29
	'}'  shift 30
	.  error

	MethodDeclaration  goto 31


state 25
	VarDeclarationList : VarDeclarationList VarDeclaration .  (14)

	.  reduce 14


state 26
	MainClass : APP '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	'('  shift 32
	.  error


state 27
	ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 '{' VarDeclarationList . MethodDeclarationList '}'  (9)
	VarDeclarationList : VarDeclarationList . VarDeclaration  (14)
	MethodDeclarationList : .  (11)

	INT  shift 19
	BOOLEAN  shift 20
	Identifier  shift 21
	PUBLIC  reduce 11
	'}'  reduce 11

	Type  goto 22
	BaseType  goto 23
	MethodDeclarationList  goto 33
	VarDeclaration  goto 25


state 28
	VarDeclaration : Type Identifier . ';'  (16)

	';'  shift 34
	.  error


state 29
	MethodDeclaration : PUBLIC . Type Identifier $$4 '(' ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)

	INT  shift 19
	BOOLEAN  shift 20
	Identifier  shift 21
	.  error

	Type  goto 35
	BaseType  goto 23


state 30
	ClassDeclaration : CLASS Identifier $$2 '{' VarDeclarationList MethodDeclarationList '}' .  (7)

	.  reduce 7


state 31
	MethodDeclarationList : MethodDeclarationList MethodDeclaration .  (10)

	.  reduce 10


state 32
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	STRING  shift 36
	.  error


state 33
	ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 '{' VarDeclarationList MethodDeclarationList . '}'  (9)
	MethodDeclarationList : MethodDeclarationList . MethodDeclaration  (10)

	PUBLIC  shift 29
	'}'  shift 37
	.  error

	MethodDeclaration  goto 31


state 34
	VarDeclaration : Type Identifier ';' .  (16)

	.  reduce 16


state 35
	MethodDeclaration : PUBLIC Type . Identifier $$4 '(' ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)

	Identifier  shift 38
	.  error


state 36
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	'['  shift 39
	.  error


state 37
	ClassDeclaration : CLASS Identifier EXTENDS Identifier $$3 '{' VarDeclarationList MethodDeclarationList '}' .  (9)

	.  reduce 9


state 38
	MethodDeclaration : PUBLIC Type Identifier . $$4 '(' ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)
	$$4 : .  (12)

	.  reduce 12

	$$4  goto 40


state 39
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' Identifier ')' '{' $$1 Statement '}' '}'  (5)

	']'  shift 41
	.  error


state 40
	MethodDeclaration : PUBLIC Type Identifier $$4 . '(' ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)

	'('  shift 42
	.  error


state 41
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . Identifier ')' '{' $$1 Statement '}' '}'  (5)

	Identifier  shift 43
	.  error


state 42
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' . ParamList ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)
	ParamList : .  (30)

	INT  shift 19
	BOOLEAN  shift 20
	Identifier  shift 21
	')'  reduce 30

	Type  goto 44
	BaseType  goto 23
	ParamList  goto 45


state 43
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier . ')' '{' $$1 Statement '}' '}'  (5)

	')'  shift 46
	.  error


state 44
	ParamList : Type . Identifier $$8 ParamListAux  (29)

	Identifier  shift 47
	.  error


state 45
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList . ')' '{' DeclOrStatList RETURN Exp ';' '}'  (13)

	')'  shift 48
	.  error


state 46
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' . '{' $$1 Statement '}' '}'  (5)

	'{'  shift 49
	.  error


state 47
	ParamList : Type Identifier . $$8 ParamListAux  (29)
	$$8 : .  (28)

	.  reduce 28

	$$8  goto 50


state 48
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList ')' . '{' DeclOrStatList RETURN Exp ';' '}'  (13)

	'{'  shift 51
	.  error


state 49
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' . $$1 Statement '}' '}'  (5)
	$$1 : .  (4)

	.  reduce 4

	$$1  goto 52


state 50
	ParamList : Type Identifier $$8 . ParamListAux  (29)
	ParamListAux : .  (33)

	','  shift 53
	')'  reduce 33

	ParamListAux  goto 54


state 51
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList ')' '{' . DeclOrStatList RETURN Exp ';' '}'  (13)
	DeclOrStatList : .  (27)

	INT  shift 19
	BOOLEAN  shift 20
	IF  shift 55
	WHILE  shift 56
	SOUT  shift 57
	Identifier  shift 58
	'{'  shift 59
	RETURN  reduce 27

	BaseType  goto 60
	DeclOrStatList  goto 61


state 52
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 . Statement '}' '}'  (5)

	IF  shift 62
	WHILE  shift 63
	SOUT  shift 64
	Identifier  shift 65
	'{'  shift 66
	.  error

	Statement  goto 67


state 53
	ParamListAux : ',' . Type Identifier $$9 ParamListAux  (32)

	INT  shift 19
	BOOLEAN  shift 20
	Identifier  shift 21
	.  error

	Type  goto 68
	BaseType  goto 23


state 54
	ParamList : Type Identifier $$8 ParamListAux .  (29)

	.  reduce 29


state 55
	DeclOrStatList : IF . '(' Exp ')' Statement ELSE Statement StatementList  (24)

	'('  shift 69
	.  error


state 56
	DeclOrStatList : WHILE . '(' Exp ')' Statement StatementList  (25)

	'('  shift 70
	.  error


state 57
	DeclOrStatList : SOUT . '(' Exp ')' ';' StatementList  (26)

	'('  shift 71
	.  error


state 58
	DeclOrStatList : Identifier . Identifier ';' $$5 DeclOrStatList  (18)
	DeclOrStatList : Identifier . '=' Exp ';' $$7 StatementList  (22)

	Identifier  shift 72
	'='  shift 73
	.  error


state 59
	DeclOrStatList : '{' . StatementList '}'  (23)
	StatementList : .  (44)

	.  reduce 44

	StatementList  goto 74


state 60
	DeclOrStatList : BaseType . Identifier ';' $$6 DeclOrStatList  (20)

	Identifier  shift 75
	.  error


state 61
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList ')' '{' DeclOrStatList . RETURN Exp ';' '}'  (13)

	RETURN  shift 76
	.  error


state 62
	Statement : IF . '(' Exp ')' Statement ELSE Statement  (39)

	'('  shift 77
	.  error


state 63
	Statement : WHILE . '(' Exp ')' Statement  (40)

	'('  shift 78
	.  error


state 64
	Statement : SOUT . '(' Exp ')' ';'  (41)

	'('  shift 79
	.  error


state 65
	Statement : Identifier . '=' Exp ';'  (42)

	'='  shift 80
	.  error


state 66
	Statement : '{' . StatementList '}'  (38)
	StatementList : .  (44)

	.  reduce 44

	StatementList  goto 81


state 67
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement . '}' '}'  (5)

	'}'  shift 82
	.  error


state 68
	ParamListAux : ',' Type . Identifier $$9 ParamListAux  (32)

	Identifier  shift 83
	.  error


state 69
	DeclOrStatList : IF '(' . Exp ')' Statement ELSE Statement StatementList  (24)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 92


state 70
	DeclOrStatList : WHILE '(' . Exp ')' Statement StatementList  (25)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 93


state 71
	DeclOrStatList : SOUT '(' . Exp ')' ';' StatementList  (26)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 94


state 72
	DeclOrStatList : Identifier Identifier . ';' $$5 DeclOrStatList  (18)

	';'  shift 95
	.  error


state 73
	DeclOrStatList : Identifier '=' . Exp ';' $$7 StatementList  (22)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 96


state 74
	DeclOrStatList : '{' StatementList . '}'  (23)
	StatementList : StatementList . Statement  (43)

	IF  shift 62
	WHILE  shift 63
	SOUT  shift 64
	Identifier  shift 65
	'{'  shift 66
	'}'  shift 97
	.  error

	Statement  goto 98


state 75
	DeclOrStatList : BaseType Identifier . ';' $$6 DeclOrStatList  (20)

	';'  shift 99
	.  error


state 76
	MethodDeclaration : PUBLIC Type Identifier $$4 '(' ParamList ')' '{' DeclOrStatList RETURN . Exp ';' '}'  (13)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 100


state 77
	Statement : IF '(' . Exp ')' Statement ELSE Statement  (39)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 101


state 78
	Statement : WHILE '(' . Exp ')' Statement  (40)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 102


state 79
	Statement : SOUT '(' . Exp ')' ';'  (41)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 103


state 80
	Statement : Identifier '=' . Exp ';'  (42)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 104


state 81
	Statement : '{' StatementList . '}'  (38)
	StatementList : StatementList . Statement  (43)

	IF  shift 62
	WHILE  shift 63
	SOUT  shift 64
	Identifier  shift 65
	'{'  shift 66
	'}'  shift 105
	.  error

	Statement  goto 98


state 82
	MainClass : APP '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' $$1 Statement '}' . '}'  (5)

	'}'  shift 106
	.  error


state 83
	ParamListAux : ',' Type Identifier . $$9 ParamListAux  (32)
	$$9 : .  (31)

	.  reduce 31

	$$9  goto 107


state 84
	Exp : NEW . Identifier '(' ')'  (57)

	Identifier  shift 108
	.  error


state 85
	Exp : TRUE .  (53)

	.  reduce 53


state 86
	Exp : FALSE .  (54)

	.  reduce 54


state 87
	Exp : THIS .  (56)

	.  reduce 56


state 88
	Exp : Identifier .  (55)

	.  reduce 55


state 89
	Exp : Number .  (52)

	.  reduce 52


state 90
	Exp : '!' . Exp  (58)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 109


state 91
	Exp : '(' . Exp ')'  (59)

	NEW  shift 84
	TRUE  shift 85
	FALSE  shift 86
	THIS  shift 87
	Identifier  shift 88
	Number  shift 89
	'!'  shift 90
	'('  shift 91
	.  error

	Exp  goto 110

